# store_automation

./: .gitignore  BUILD_AND_USAGE.md  README.md  SERVER_GUIDE.md  app.py  build_mac.py  main.py  pyproject.toml  run_streamlit.py  start_ngrok.py  start_server.py  storeauto.spec  storeauto_macos15_1.spec  storeauto_macos15_5.spec  송장자동화.spec
.streamlit/: config.toml
ui/: coupang_bulk.py  coupang_cj.py  login.py  naver_bulk.py  naver_cj.py  settings.py
utils/: ai_helper.py  auth.py  config.py  coupang_processor.py  excel_utils.py  naver_processor.py
